
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)
HEAD    (2004-02-09)
  * forgot a #endif in example example/templates/header.html
------------------------------------------------------------------
HEAD    (2004-02-09
  * New Button to toggle "Print format" and "screen format". Print format
    means to print all records in one browser window. This is handy to
    print out data or Reports. Also it is nice for the use of Excel Weblinks
    Changes to example/templates/header.html and lib/perl/Gedafe/GUI.pm
	(Johannes)
------------------------------------------------------------------
HEAD    (2004-02-04)
  * Change DB.pm, so that numeric fields accept separator or grouping
    characters in numbers and decimal comma instead of the decimal 
    point. This is a hack as it should be done in the widget code.
	(Johannes)

HEAD	(2004-01-20) 
------------------------------------------------------------------------------
  * Allow column names not starting with the table name.
    (documentation change in doc/gedafe-sql.pod (johannes)

HEAD	(2003-12-12)
------------------------------------------------------------------------------
  * offer a button to copy a record "as new" i.e. "clone" a record. 	
    Change template td_edit.html, GUI.pm, add th_clone.html and
    "clone.gif" Button (johannes)

  * Support for user plugin widgets as per Widgets.pm
    Works just like the pearls. (freek)

  * Add id columms to meta_fields and meta_tables in example database
    demo.sql. This is not needed, but it allows you to maintain these
    tables more easy with tools like phpPgAmin or pgadmin3 (johannes)

1.2.1 (2003-09-03)
------------------------------------------------------------------------------
  * New widget: combo (just the combo-box without text entry)

  * Bugfixes: date widget didn't work.

1.2.0 (2003-09-27)